force-app/main/default/objects/PL_Statement_Week__c/PL_Statement_Week__c.object-meta.xml
<CustomObject>
    <label>PL Statement Week</label>
    <nameField>
        <label>PL Statement Week Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PL Statement Weeks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>