force-app/main/default/objects/PL_Statement_Week__c/fields/Parent_P_L_Statement__c.field-meta.xml
<CustomField>
    <fullName>Parent_P_L_Statement__c</fullName>
    <label>Parent P&amp;L Statement</label>
    <referenceTo>P_L_Statement__c</referenceTo>
    <relationshipLabel>PL Statement Weeks</relationshipLabel>
    <relationshipName>PL_Statement_Weeks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>