force-app/main/default/objects/PL_Statement_Week__c/fields/Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Account</label>
    <referenceTo>Payment_Account__c</referenceTo>
    <relationshipLabel>PL Statement Weeks</relationshipLabel>
    <relationshipName>PL_Statement_Weeks</relationshipName>
    <type>Lookup</type>
</CustomField>