force-app/main/default/objects/PL_Statement_Week__c/fields/week1__c.field-meta.xml
<CustomField>
    <fullName>week1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>week1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>