force-app/main/default/objects/PL_Statement_Week__c/fields/week1Date__c.field-meta.xml
<CustomField>
    <fullName>week1Date__c</fullName>
    <label>week1Date</label>
    <type>Date</type>
</CustomField>