force-app/main/default/objects/PL_Statement_Week__c/fields/week2__c.field-meta.xml
<CustomField>
    <fullName>week2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>week2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>