force-app/main/default/objects/PL_Statement_Week__c/fields/week2Date__c.field-meta.xml
<CustomField>
    <fullName>week2Date__c</fullName>
    <label>week2Date</label>
    <type>Date</type>
</CustomField>