force-app/main/default/objects/PL_Statement_Week__c/fields/week3Date__c.field-meta.xml
<CustomField>
    <fullName>week3Date__c</fullName>
    <label>week3Date</label>
    <type>Date</type>
</CustomField>