force-app/main/default/objects/PL_Statement_Week__c/fields/Week_Total__c.field-meta.xml
<CustomField>
    <fullName>Week_Total__c</fullName>
    <formula>week1__c +  week2__c + week3__c + week4__c + week5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>